--- a/01 - JavaScript Drum Kit/style.css
+++ b/01 - JavaScript Drum Kit/style.css
@@ -1,6 +1,6 @@
 html {
   font-size: 10px;
-  background: url(https://i.imgur.com/b9r5sEL.jpg) bottom center;
+  background: url(https://geneseesun.com/wp-content/uploads/2016/01/012716-statesmen2-300x234.jpg) bottom center;
   background-size: cover;
 }
 
